--- a/test/html/expect/test_package+ml/Alias/X/index.html
+++ b/test/html/expect/test_package+ml/Alias/X/index.html
@@ -23,7 +23,7 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec type" id="type-t">
+    <div class="spec type lang-ocaml" id="type-t">
      <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = int</code>
     </div>
     <div>
