--- a/test/html/expect/test_package+ml/External/index.html
+++ b/test/html/expect/test_package+ml/External/index.html
@@ -23,7 +23,7 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec external" id="val-foo">
+    <div class="spec external lang-ocaml" id="val-foo">
      <a href="#val-foo" class="anchor"></a><code><span class="keyword">val</span> foo : unit <span>-&gt;</span> unit</code>
     </div>
     <div>
