--- a/test/html/expect/test_package+ml/Include2/index.html
+++ b/test/html/expect/test_package+ml/Include2/index.html
@@ -23,7 +23,7 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec module" id="module-X">
+    <div class="spec module lang-ocaml" id="module-X">
      <a href="#module-X" class="anchor"></a><code><span class="keyword">module</span> <a href="X/index.html">X</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
     </div>
     <div>
@@ -33,13 +33,13 @@
     </div>
    </div>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
       <details open="open">
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="X/index.html">X</a></code></span>
        </summary>
-       <div class="spec type" id="type-t">
+       <div class="spec type lang-ocaml" id="type-t">
         <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = int</code>
        </div>
       </details>
