--- a/test/html/expect/test_package+ml/Interlude/index.html
+++ b/test/html/expect/test_package+ml/Interlude/index.html
@@ -31,7 +31,7 @@
     </p>
    </aside>
    <div>
-    <div class="spec value" id="val-foo">
+    <div class="spec value lang-ocaml" id="val-foo">
      <a href="#val-foo" class="anchor"></a><code><span class="keyword">val</span> foo : unit</code>
     </div>
     <div>
@@ -52,7 +52,7 @@
     </p>
    </aside>
    <div>
-    <div class="spec value" id="val-bar">
+    <div class="spec value lang-ocaml" id="val-bar">
      <a href="#val-bar" class="anchor"></a><code><span class="keyword">val</span> bar : unit</code>
     </div>
     <div>
@@ -61,13 +61,13 @@
      </p>
     </div>
    </div>
-   <div class="spec value" id="val-multiple">
+   <div class="spec value lang-ocaml" id="val-multiple">
     <a href="#val-multiple" class="anchor"></a><code><span class="keyword">val</span> multiple : unit</code>
    </div>
-   <div class="spec value" id="val-signature">
+   <div class="spec value lang-ocaml" id="val-signature">
     <a href="#val-signature" class="anchor"></a><code><span class="keyword">val</span> signature : unit</code>
    </div>
-   <div class="spec value" id="val-items">
+   <div class="spec value lang-ocaml" id="val-items">
     <a href="#val-items" class="anchor"></a><code><span class="keyword">val</span> items : unit</code>
    </div>
    <aside>
