--- a/test/html/expect/test_package+ml/Nested/F/index.html
+++ b/test/html/expect/test_package+ml/Nested/F/index.html
@@ -44,10 +44,10 @@
    <h2 id="parameters">
     <a href="#parameters" class="anchor"></a>Parameters
    </h2>
-   <div class="spec parameter" id="argument-1-Arg1">
+   <div class="spec parameter lang-ocaml" id="argument-1-Arg1">
     <a href="#argument-1-Arg1" class="anchor"></a><code><span class="keyword">module</span> <a href="argument-1-Arg1/index.html">Arg1</a> : <a href="../module-type-Y/index.html">Y</a></code>
    </div>
-   <div class="spec parameter" id="argument-2-Arg2">
+   <div class="spec parameter lang-ocaml" id="argument-2-Arg2">
     <a href="#argument-2-Arg2" class="anchor"></a><code><span class="keyword">module</span> <a href="argument-2-Arg2/index.html">Arg2</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
    <h2 id="signature">
@@ -57,7 +57,7 @@
     <a href="#type" class="anchor"></a>Type
    </h2>
    <div>
-    <div class="spec type" id="type-t">
+    <div class="spec type lang-ocaml" id="type-t">
      <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = <a href="argument-1-Arg1/index.html#type-t">Arg1.t</a> * <a href="argument-2-Arg2/index.html#type-t">Arg2.t</a></code>
     </div>
     <div>
