--- a/test/html/expect/test_package+ml/Recent_impl/index.html
+++ b/test/html/expect/test_package+ml/Recent_impl/index.html
@@ -22,19 +22,19 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module" id="module-Foo">
+   <div class="spec module lang-ocaml" id="module-Foo">
     <a href="#module-Foo" class="anchor"></a><code><span class="keyword">module</span> <a href="Foo/index.html">Foo</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec module" id="module-B">
+   <div class="spec module lang-ocaml" id="module-B">
     <a href="#module-B" class="anchor"></a><code><span class="keyword">module</span> <a href="B/index.html">B</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec type" id="type-u">
+   <div class="spec type lang-ocaml" id="type-u">
     <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u</code>
    </div>
-   <div class="spec module-type" id="module-type-S">
+   <div class="spec module-type lang-ocaml" id="module-type-S">
     <a href="#module-type-S" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S/index.html">S</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec module" id="module-B'">
+   <div class="spec module lang-ocaml" id="module-B'">
     <a href="#module-B'" class="anchor"></a><code><span class="keyword">module</span> B' = <a href="Foo/B/index.html">Foo.B</a></code>
    </div>
   </div>
