--- a/test/html/expect/test_package+re/Nested/F/argument-2-Arg2/index.html
+++ b/test/html/expect/test_package+re/Nested/F/argument-2-Arg2/index.html
@@ -33,8 +33,11 @@
     <a href="#type" class="anchor"></a>Type
    </h2>
    <div>
-    <div class="spec type" id="type-t">
+    <div class="spec type lang-reason" id="type-t">
      <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t;</code>
+    </div>
+    <div class="spec type lang-ocaml" id="type-t">
+     <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t</code>
     </div>
     <div>
      <p>
