--- a/test/html/expect/test_package+re/Stop/index.html
+++ b/test/html/expect/test_package+re/Stop/index.html
@@ -26,7 +26,7 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec value" id="val-foo">
+    <div class="spec value lang-ocaml" id="val-foo">
      <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: int;</code>
     </div>
     <div>
@@ -46,10 +46,10 @@
      Now, we have a nested module, and it has a stop comment between its two items. We want to see that the first item is displayed, but the second is missing, and the stop comment disables documenation only in that module, and not in this outer module.
     </p>
    </aside>
-   <div class="spec module" id="module-N">
+   <div class="spec module lang-ocaml" id="module-N">
     <a href="#module-N" class="anchor"></a><code><span class="keyword">module</span> <a href="N/index.html">N</a>: { ... };</code>
    </div>
-   <div class="spec value" id="val-lol">
+   <div class="spec value lang-ocaml" id="val-lol">
     <a href="#val-lol" class="anchor"></a><code><span class="keyword">let</span> lol: int;</code>
    </div>
   </div>
