--- a/test/html/expect/test_package+re/Val/index.html
+++ b/test/html/expect/test_package+re/Val/index.html
@@ -23,7 +23,7 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec value" id="val-documented">
+    <div class="spec value lang-ocaml" id="val-documented">
      <a href="#val-documented" class="anchor"></a><code><span class="keyword">let</span> documented: unit;</code>
     </div>
     <div>
@@ -32,11 +32,11 @@
      </p>
     </div>
    </div>
-   <div class="spec value" id="val-undocumented">
+   <div class="spec value lang-ocaml" id="val-undocumented">
     <a href="#val-undocumented" class="anchor"></a><code><span class="keyword">let</span> undocumented: unit;</code>
    </div>
    <div>
-    <div class="spec value" id="val-documented_above">
+    <div class="spec value lang-ocaml" id="val-documented_above">
      <a href="#val-documented_above" class="anchor"></a><code><span class="keyword">let</span> documented_above: unit;</code>
     </div>
     <div>
