--- a/test/html/expect/test_package+ml/Alias/index.html
+++ b/test/html/expect/test_package+ml/Alias/index.html
@@ -22,10 +22,10 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module" id="module-Foo__X">
+   <div class="spec module lang-ocaml" id="module-Foo__X">
     <a href="#module-Foo__X" class="anchor"></a><code><span class="keyword">module</span> <a href="Foo__X/index.html">Foo__X</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec module" id="module-X">
+   <div class="spec module lang-ocaml" id="module-X">
     <a href="#module-X" class="anchor"></a><code><span class="keyword">module</span> <a href="X/index.html">X</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
   </div>
