--- a/test/html/expect/test_package+ml/Labels/index.html
+++ b/test/html/expect/test_package+ml/Labels/index.html
@@ -35,11 +35,11 @@
    <h2 id="L2">
     <a href="#L2" class="anchor"></a>Attached to nothing
    </h2>
-   <div class="spec module" id="module-A">
+   <div class="spec module lang-ocaml" id="module-A">
     <a href="#module-A" class="anchor"></a><code><span class="keyword">module</span> <a href="A/index.html">A</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
    <div>
-    <div class="spec type" id="type-t">
+    <div class="spec type lang-ocaml" id="type-t">
      <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t</code>
     </div>
     <div>
@@ -49,7 +49,7 @@
     </div>
    </div>
    <div>
-    <div class="spec value" id="val-f">
+    <div class="spec value lang-ocaml" id="val-f">
      <a href="#val-f" class="anchor"></a><code><span class="keyword">val</span> f : <a href="index.html#type-t">t</a></code>
     </div>
     <div>
@@ -59,7 +59,7 @@
     </div>
    </div>
    <div>
-    <div class="spec external" id="val-e">
+    <div class="spec external lang-ocaml" id="val-e">
      <a href="#val-e" class="anchor"></a><code><span class="keyword">val</span> e : unit <span>-&gt;</span> <a href="index.html#type-t">t</a></code>
     </div>
     <div>
@@ -68,17 +68,17 @@
      </p>
     </div>
    </div>
-   <div class="spec module-type" id="module-type-S">
+   <div class="spec module-type lang-ocaml" id="module-type-S">
     <a href="#module-type-S" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S/index.html">S</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec class" id="class-c">
+   <div class="spec class lang-ocaml" id="class-c">
     <a href="#class-c" class="anchor"></a><code><span class="keyword">class</span>  <a href="class-c/index.html">c</a> : <span class="keyword">object</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec class-type" id="class-type-cs">
+   <div class="spec class-type lang-ocaml" id="class-type-cs">
     <a href="#class-type-cs" class="anchor"></a><code><span class="keyword">class</span> <span class="keyword">type</span>  <a href="class-type-cs/index.html">cs</a><span class="keyword">object</span> ... <span class="keyword">end</span></code>
    </div>
    <div>
-    <div class="spec exception" id="exception-E">
+    <div class="spec exception lang-ocaml" id="exception-E">
      <a href="#exception-E" class="anchor"></a><code><span class="keyword">exception</span> <span class="exception">E</span></code>
     </div>
     <div>
@@ -87,11 +87,11 @@
      </p>
     </div>
    </div>
-   <div class="spec type" id="type-x">
+   <div class="spec type lang-ocaml" id="type-x">
     <a href="#type-x" class="anchor"></a><code><span class="keyword">type</span> x = ..</code>
    </div>
    <div>
-    <div class="spec extension">
+    <div class="spec extension lang-ocaml">
      <code><span class="keyword">type</span> <a href="index.html#type-x">x</a> += </code>
      <table>
       <tbody>
@@ -110,7 +110,7 @@
     </div>
    </div>
    <div>
-    <div class="spec module-substitution" id="module-S">
+    <div class="spec module-substitution lang-ocaml" id="module-S">
      <a href="#module-S" class="anchor"></a><code><span class="keyword">module</span> S := <a href="A/index.html">A</a></code>
     </div>
     <div>
@@ -120,7 +120,7 @@
     </div>
    </div>
    <div>
-    <div class="spec type-subst" id="type-s">
+    <div class="spec type-subst lang-ocaml" id="type-s">
      <a href="#type-s" class="anchor"></a><code><span class="keyword">type</span> s := <a href="index.html#type-t">t</a></code>
     </div>
     <div>
@@ -129,7 +129,7 @@
      </p>
     </div>
    </div>
-   <div class="spec type" id="type-u">
+   <div class="spec type lang-ocaml" id="type-u">
     <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u = </code>
     <table>
      <tbody>
@@ -146,7 +146,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-v">
+   <div class="spec type lang-ocaml" id="type-v">
     <a href="#type-v" class="anchor"></a><code><span class="keyword">type</span> v = {</code>
     <table>
      <tbody>
