--- a/test/html/expect/test_package+ml/Nested/class-z/index.html
+++ b/test/html/expect/test_package+ml/Nested/class-z/index.html
@@ -36,7 +36,7 @@
   </nav>
   <div class="content">
    <div>
-    <div class="spec instance-variable" id="val-y">
+    <div class="spec instance-variable lang-ocaml" id="val-y">
      <a href="#val-y" class="anchor"></a><code><span class="keyword">val</span> y : int</code>
     </div>
     <div>
@@ -45,14 +45,14 @@
      </p>
     </div>
    </div>
-   <div class="spec instance-variable" id="val-y'">
+   <div class="spec instance-variable lang-ocaml" id="val-y'">
     <a href="#val-y'" class="anchor"></a><code><span class="keyword">val</span> <span class="keyword">mutable</span> <span class="keyword">virtual</span> y' : int</code>
    </div>
    <h2 id="methods">
     <a href="#methods" class="anchor"></a>Methods
    </h2>
    <div>
-    <div class="spec method" id="method-z">
+    <div class="spec method lang-ocaml" id="method-z">
      <a href="#method-z" class="anchor"></a><code><span class="keyword">method</span> z : int</code>
     </div>
     <div>
@@ -61,7 +61,7 @@
      </p>
     </div>
    </div>
-   <div class="spec method" id="method-z'">
+   <div class="spec method lang-ocaml" id="method-z'">
     <a href="#method-z'" class="anchor"></a><code><span class="keyword">method</span> <span class="keyword">private</span> <span class="keyword">virtual</span> z' : int</code>
    </div>
   </div>
