--- a/test/html/expect/test_package+ml/Nested/index.html
+++ b/test/html/expect/test_package+ml/Nested/index.html
@@ -45,7 +45,7 @@
     <a href="#module" class="anchor"></a>Module
    </h2>
    <div>
-    <div class="spec module" id="module-X">
+    <div class="spec module lang-ocaml" id="module-X">
      <a href="#module-X" class="anchor"></a><code><span class="keyword">module</span> <a href="X/index.html">X</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
     </div>
     <div>
@@ -58,7 +58,7 @@
     <a href="#module-type" class="anchor"></a>Module type
    </h2>
    <div>
-    <div class="spec module-type" id="module-type-Y">
+    <div class="spec module-type lang-ocaml" id="module-type-Y">
      <a href="#module-type-Y" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Y/index.html">Y</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
     </div>
     <div>
@@ -71,7 +71,7 @@
     <a href="#functor" class="anchor"></a>Functor
    </h2>
    <div>
-    <div class="spec module" id="module-F">
+    <div class="spec module lang-ocaml" id="module-F">
      <a href="#module-F" class="anchor"></a><code><span class="keyword">module</span> <a href="F/index.html">F</a> (<a href="F/argument-1-Arg1/index.html">Arg1</a> : <a href="module-type-Y/index.html">Y</a>) (<a href="F/argument-2-Arg2/index.html">Arg2</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span>) : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
     </div>
     <div>
@@ -84,7 +84,7 @@
     <a href="#class" class="anchor"></a>Class
    </h2>
    <div>
-    <div class="spec class" id="class-z">
+    <div class="spec class lang-ocaml" id="class-z">
      <a href="#class-z" class="anchor"></a><code><span class="keyword">class</span> <span class="keyword">virtual</span>  <a href="class-z/index.html">z</a> : <span class="keyword">object</span> ... <span class="keyword">end</span></code>
     </div>
     <div>
@@ -93,7 +93,7 @@
      </p>
     </div>
    </div>
-   <div class="spec class" id="class-inherits">
+   <div class="spec class lang-ocaml" id="class-inherits">
     <a href="#class-inherits" class="anchor"></a><code><span class="keyword">class</span> <span class="keyword">virtual</span>  <a href="class-inherits/index.html">inherits</a> : <span class="keyword">object</span> ... <span class="keyword">end</span></code>
    </div>
   </div>
