--- a/test/html/expect/test_package+ml/Nested/module-type-Y/index.html
+++ b/test/html/expect/test_package+ml/Nested/module-type-Y/index.html
@@ -42,7 +42,7 @@
     <a href="#type" class="anchor"></a>Type
    </h2>
    <div>
-    <div class="spec type" id="type-t">
+    <div class="spec type lang-ocaml" id="type-t">
      <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t</code>
     </div>
     <div>
@@ -55,7 +55,7 @@
     <a href="#values" class="anchor"></a>Values
    </h2>
    <div>
-    <div class="spec value" id="val-y">
+    <div class="spec value lang-ocaml" id="val-y">
      <a href="#val-y" class="anchor"></a><code><span class="keyword">val</span> y : <a href="index.html#type-t">t</a></code>
     </div>
     <div>
