--- a/test/html/expect/test_package+ml/Recent/X/index.html
+++ b/test/html/expect/test_package+ml/Recent/X/index.html
@@ -22,16 +22,16 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module-substitution" id="module-L">
+   <div class="spec module-substitution lang-ocaml" id="module-L">
     <a href="#module-L" class="anchor"></a><code><span class="keyword">module</span> L := <a href="../Z/Y/index.html">Z.Y</a></code>
    </div>
-   <div class="spec type" id="type-t">
+   <div class="spec type lang-ocaml" id="type-t">
     <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = <span>int <a href="../Z/Y/X/index.html#type-t">Z.Y.X.t</a></span></code>
    </div>
-   <div class="spec type-subst" id="type-u">
+   <div class="spec type-subst lang-ocaml" id="type-u">
     <a href="#type-u" class="anchor"></a><code><span class="keyword">type</span> u := int</code>
    </div>
-   <div class="spec type" id="type-v">
+   <div class="spec type lang-ocaml" id="type-v">
     <a href="#type-v" class="anchor"></a><code><span class="keyword">type</span> v = <span><a href="index.html#type-u">u</a> <a href="../Z/Y/X/index.html#type-t">Z.Y.X.t</a></span></code>
    </div>
   </div>
