--- a/test/html/expect/test_package+ml/Recent/index.html
+++ b/test/html/expect/test_package+ml/Recent/index.html
@@ -22,13 +22,13 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec module-type" id="module-type-S">
+   <div class="spec module-type lang-ocaml" id="module-type-S">
     <a href="#module-type-S" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S/index.html">S</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec module-type" id="module-type-S1">
+   <div class="spec module-type lang-ocaml" id="module-type-S1">
     <a href="#module-type-S1" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-S1/index.html">S1</a> = <span class="keyword">functor</span> (<a href="module-type-S1/argument-1-_/index.html">_</a> : <a href="module-type-S/index.html">S</a>) <span>-&gt;</span> <a href="module-type-S/index.html">S</a></code>
    </div>
-   <div class="spec type" id="type-variant">
+   <div class="spec type lang-ocaml" id="type-variant">
     <a href="#type-variant" class="anchor"></a><code><span class="keyword">type</span> variant = </code>
     <table>
      <tbody>
@@ -80,7 +80,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-gadt">
+   <div class="spec type lang-ocaml" id="type-gadt">
     <a href="#type-gadt" class="anchor"></a><code><span class="keyword">type</span> <span>_ gadt</span> = </code>
     <table>
      <tbody>
@@ -117,7 +117,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-polymorphic_variant">
+   <div class="spec type lang-ocaml" id="type-polymorphic_variant">
     <a href="#type-polymorphic_variant" class="anchor"></a><code><span class="keyword">type</span> polymorphic_variant = [ </code>
     <table>
      <tbody>
@@ -155,13 +155,13 @@
     </table>
     <code> ]</code>
    </div>
-   <div class="spec type" id="type-empty_variant">
+   <div class="spec type lang-ocaml" id="type-empty_variant">
     <a href="#type-empty_variant" class="anchor"></a><code><span class="keyword">type</span> empty_variant = |</code>
    </div>
-   <div class="spec type" id="type-nonrec_">
+   <div class="spec type lang-ocaml" id="type-nonrec_">
     <a href="#type-nonrec_" class="anchor"></a><code><span class="keyword">type</span> <span class="keyword">nonrec</span> nonrec_ = int</code>
    </div>
-   <div class="spec type" id="type-empty_conj">
+   <div class="spec type lang-ocaml" id="type-empty_conj">
     <a href="#type-empty_conj" class="anchor"></a><code><span class="keyword">type</span> empty_conj = </code>
     <table>
      <tbody>
@@ -173,7 +173,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-conj">
+   <div class="spec type lang-ocaml" id="type-conj">
     <a href="#type-conj" class="anchor"></a><code><span class="keyword">type</span> conj = </code>
     <table>
      <tbody>
@@ -185,19 +185,19 @@
      </tbody>
     </table>
    </div>
-   <div class="spec value" id="val-empty_conj">
+   <div class="spec value lang-ocaml" id="val-empty_conj">
     <a href="#val-empty_conj" class="anchor"></a><code><span class="keyword">val</span> empty_conj : <span>[&lt; <span>`X of &amp; <span class="type-var">'a</span> &amp; int * float</span> ]</span></code>
    </div>
-   <div class="spec value" id="val-conj">
+   <div class="spec value lang-ocaml" id="val-conj">
     <a href="#val-conj" class="anchor"></a><code><span class="keyword">val</span> conj : <span>[&lt; <span>`X of int &amp; <span>[&lt; <span>`B of int &amp; float</span> ]</span></span> ]</span></code>
    </div>
-   <div class="spec module" id="module-Z">
+   <div class="spec module lang-ocaml" id="module-Z">
     <a href="#module-Z" class="anchor"></a><code><span class="keyword">module</span> <a href="Z/index.html">Z</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec module" id="module-X">
+   <div class="spec module lang-ocaml" id="module-X">
     <a href="#module-X" class="anchor"></a><code><span class="keyword">module</span> <a href="X/index.html">X</a> : <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec module-type" id="module-type-PolyS">
+   <div class="spec module-type lang-ocaml" id="module-type-PolyS">
     <a href="#module-type-PolyS" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-PolyS/index.html">PolyS</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
   </div>
