--- a/test/html/expect/test_package+ml/Section/index.html
+++ b/test/html/expect/test_package+ml/Section/index.html
@@ -77,7 +77,7 @@
    <h2 id="value-only">
     <a href="#value-only" class="anchor"></a>Value only
    </h2>
-   <div class="spec value" id="val-foo">
+   <div class="spec value lang-ocaml" id="val-foo">
     <a href="#val-foo" class="anchor"></a><code><span class="keyword">val</span> foo : unit</code>
    </div>
    <h2 id="empty-section">
