--- a/test/html/expect/test_package+ml/Type/index.html
+++ b/test/html/expect/test_package+ml/Type/index.html
@@ -23,7 +23,7 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec type" id="type-abstract">
+    <div class="spec type lang-ocaml" id="type-abstract">
      <a href="#type-abstract" class="anchor"></a><code><span class="keyword">type</span> abstract</code>
     </div>
     <div>
@@ -32,46 +32,46 @@
      </p>
     </div>
    </div>
-   <div class="spec type" id="type-alias">
+   <div class="spec type lang-ocaml" id="type-alias">
     <a href="#type-alias" class="anchor"></a><code><span class="keyword">type</span> alias = int</code>
    </div>
-   <div class="spec type" id="type-private_">
+   <div class="spec type lang-ocaml" id="type-private_">
     <a href="#type-private_" class="anchor"></a><code><span class="keyword">type</span> private_ = <span class="keyword">private</span> int</code>
    </div>
-   <div class="spec type" id="type-constructor">
+   <div class="spec type lang-ocaml" id="type-constructor">
     <a href="#type-constructor" class="anchor"></a><code><span class="keyword">type</span> <span>'a constructor</span> = <span class="type-var">'a</span></code>
    </div>
-   <div class="spec type" id="type-arrow">
+   <div class="spec type lang-ocaml" id="type-arrow">
     <a href="#type-arrow" class="anchor"></a><code><span class="keyword">type</span> arrow = int <span>-&gt;</span> int</code>
    </div>
-   <div class="spec type" id="type-higher_order">
+   <div class="spec type lang-ocaml" id="type-higher_order">
     <a href="#type-higher_order" class="anchor"></a><code><span class="keyword">type</span> higher_order = <span>(int <span>-&gt;</span> int)</span> <span>-&gt;</span> int</code>
    </div>
-   <div class="spec type" id="type-labeled">
+   <div class="spec type lang-ocaml" id="type-labeled">
     <a href="#type-labeled" class="anchor"></a><code><span class="keyword">type</span> labeled = <span>l:int</span> <span>-&gt;</span> int</code>
    </div>
-   <div class="spec type" id="type-optional">
+   <div class="spec type lang-ocaml" id="type-optional">
     <a href="#type-optional" class="anchor"></a><code><span class="keyword">type</span> optional = <span>?⁠l:int</span> <span>-&gt;</span> int</code>
    </div>
-   <div class="spec type" id="type-labeled_higher_order">
+   <div class="spec type lang-ocaml" id="type-labeled_higher_order">
     <a href="#type-labeled_higher_order" class="anchor"></a><code><span class="keyword">type</span> labeled_higher_order = <span>(<span>l:int</span> <span>-&gt;</span> int)</span> <span>-&gt;</span> <span>(<span>?⁠l:int</span> <span>-&gt;</span> int)</span> <span>-&gt;</span> int</code>
    </div>
-   <div class="spec type" id="type-pair">
+   <div class="spec type lang-ocaml" id="type-pair">
     <a href="#type-pair" class="anchor"></a><code><span class="keyword">type</span> pair = int * int</code>
    </div>
-   <div class="spec type" id="type-parens_dropped">
+   <div class="spec type lang-ocaml" id="type-parens_dropped">
     <a href="#type-parens_dropped" class="anchor"></a><code><span class="keyword">type</span> parens_dropped = int * int</code>
    </div>
-   <div class="spec type" id="type-triple">
+   <div class="spec type lang-ocaml" id="type-triple">
     <a href="#type-triple" class="anchor"></a><code><span class="keyword">type</span> triple = int * int * int</code>
    </div>
-   <div class="spec type" id="type-nested_pair">
+   <div class="spec type lang-ocaml" id="type-nested_pair">
     <a href="#type-nested_pair" class="anchor"></a><code><span class="keyword">type</span> nested_pair = <span>(int * int)</span> * int</code>
    </div>
-   <div class="spec type" id="type-instance">
+   <div class="spec type lang-ocaml" id="type-instance">
     <a href="#type-instance" class="anchor"></a><code><span class="keyword">type</span> instance = <span>int <a href="index.html#type-constructor">constructor</a></span></code>
    </div>
-   <div class="spec type" id="type-variant_e">
+   <div class="spec type lang-ocaml" id="type-variant_e">
     <a href="#type-variant_e" class="anchor"></a><code><span class="keyword">type</span> variant_e = {</code>
     <table>
      <tbody>
@@ -84,7 +84,7 @@
     </table>
     <code>}</code>
    </div>
-   <div class="spec type" id="type-variant">
+   <div class="spec type lang-ocaml" id="type-variant">
     <a href="#type-variant" class="anchor"></a><code><span class="keyword">type</span> variant = </code>
     <table>
      <tbody>
@@ -126,7 +126,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-variant_c">
+   <div class="spec type lang-ocaml" id="type-variant_c">
     <a href="#type-variant_c" class="anchor"></a><code><span class="keyword">type</span> variant_c = {</code>
     <table>
      <tbody>
@@ -139,7 +139,7 @@
     </table>
     <code>}</code>
    </div>
-   <div class="spec type" id="type-gadt">
+   <div class="spec type lang-ocaml" id="type-gadt">
     <a href="#type-gadt" class="anchor"></a><code><span class="keyword">type</span> <span>_ gadt</span> = </code>
     <table>
      <tbody>
@@ -161,7 +161,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-degenerate_gadt">
+   <div class="spec type lang-ocaml" id="type-degenerate_gadt">
     <a href="#type-degenerate_gadt" class="anchor"></a><code><span class="keyword">type</span> degenerate_gadt = </code>
     <table>
      <tbody>
@@ -173,7 +173,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-private_variant">
+   <div class="spec type lang-ocaml" id="type-private_variant">
     <a href="#type-private_variant" class="anchor"></a><code><span class="keyword">type</span> private_variant = <span class="keyword">private</span> </code>
     <table>
      <tbody>
@@ -185,7 +185,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-record">
+   <div class="spec type lang-ocaml" id="type-record">
     <a href="#type-record" class="anchor"></a><code><span class="keyword">type</span> record = {</code>
     <table>
      <tbody>
@@ -228,7 +228,7 @@
     </table>
     <code>}</code>
    </div>
-   <div class="spec type" id="type-polymorphic_variant">
+   <div class="spec type lang-ocaml" id="type-polymorphic_variant">
     <a href="#type-polymorphic_variant" class="anchor"></a><code><span class="keyword">type</span> polymorphic_variant = [ </code>
     <table>
      <tbody>
@@ -256,7 +256,7 @@
     </table>
     <code> ]</code>
    </div>
-   <div class="spec type" id="type-polymorphic_variant_extension">
+   <div class="spec type lang-ocaml" id="type-polymorphic_variant_extension">
     <a href="#type-polymorphic_variant_extension" class="anchor"></a><code><span class="keyword">type</span> polymorphic_variant_extension = [ </code>
     <table>
      <tbody>
@@ -274,7 +274,7 @@
     </table>
     <code> ]</code>
    </div>
-   <div class="spec type" id="type-nested_polymorphic_variant">
+   <div class="spec type lang-ocaml" id="type-nested_polymorphic_variant">
     <a href="#type-nested_polymorphic_variant" class="anchor"></a><code><span class="keyword">type</span> nested_polymorphic_variant = [ </code>
     <table>
      <tbody>
@@ -287,10 +287,10 @@
     </table>
     <code> ]</code>
    </div>
-   <div class="spec type" id="type-private_extenion#row">
+   <div class="spec type lang-ocaml" id="type-private_extenion#row">
     <a href="#type-private_extenion#row" class="anchor"></a><code><span class="keyword">type</span> private_extenion#row</code>
    </div>
-   <div class="spec type" id="type-private_extenion">
+   <div class="spec type lang-ocaml" id="type-private_extenion">
     <a href="#type-private_extenion" class="anchor"></a><code><span class="keyword">and</span> private_extenion = <span class="keyword">private</span> [&gt; </code>
     <table>
      <tbody>
@@ -303,73 +303,73 @@
     </table>
     <code> ]</code>
    </div>
-   <div class="spec type" id="type-object_">
+   <div class="spec type lang-ocaml" id="type-object_">
     <a href="#type-object_" class="anchor"></a><code><span class="keyword">type</span> object_ = &lt; a : int; b : int; c : int; &gt;</code>
    </div>
-   <div class="spec module-type" id="module-type-X">
+   <div class="spec module-type lang-ocaml" id="module-type-X">
     <a href="#module-type-X" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-X/index.html">X</a> = <span class="keyword">sig</span> ... <span class="keyword">end</span></code>
    </div>
-   <div class="spec type" id="type-module_">
+   <div class="spec type lang-ocaml" id="type-module_">
     <a href="#type-module_" class="anchor"></a><code><span class="keyword">type</span> module_ = <span>(<span class="keyword">module</span> <a href="module-type-X/index.html">X</a>)</span></code>
    </div>
-   <div class="spec type" id="type-module_substitution">
+   <div class="spec type lang-ocaml" id="type-module_substitution">
     <a href="#type-module_substitution" class="anchor"></a><code><span class="keyword">type</span> module_substitution = <span>(<span class="keyword">module</span> <a href="module-type-X/index.html">X</a> <span class="keyword">with</span> <span class="keyword">type</span> <a href="module-type-X/index.html#type-t">t</a> = int <span class="keyword">and</span> <span class="keyword">type</span> <a href="module-type-X/index.html#type-u">u</a> = unit)</span></code>
    </div>
-   <div class="spec type" id="type-covariant">
+   <div class="spec type lang-ocaml" id="type-covariant">
     <a href="#type-covariant" class="anchor"></a><code><span class="keyword">type</span> <span>+'a covariant</span></code>
    </div>
-   <div class="spec type" id="type-contravariant">
+   <div class="spec type lang-ocaml" id="type-contravariant">
     <a href="#type-contravariant" class="anchor"></a><code><span class="keyword">type</span> <span>-'a contravariant</span></code>
    </div>
-   <div class="spec type" id="type-bivariant">
+   <div class="spec type lang-ocaml" id="type-bivariant">
     <a href="#type-bivariant" class="anchor"></a><code><span class="keyword">type</span> <span>_ bivariant</span> = int</code>
    </div>
-   <div class="spec type" id="type-binary">
+   <div class="spec type lang-ocaml" id="type-binary">
     <a href="#type-binary" class="anchor"></a><code><span class="keyword">type</span> <span>('a, 'b) binary</span></code>
    </div>
-   <div class="spec type" id="type-using_binary">
+   <div class="spec type lang-ocaml" id="type-using_binary">
     <a href="#type-using_binary" class="anchor"></a><code><span class="keyword">type</span> using_binary = <span><span>(int,&nbsp;int)</span> <a href="index.html#type-binary">binary</a></span></code>
    </div>
-   <div class="spec type" id="type-name">
+   <div class="spec type lang-ocaml" id="type-name">
     <a href="#type-name" class="anchor"></a><code><span class="keyword">type</span> <span>'custom name</span></code>
    </div>
-   <div class="spec type" id="type-constrained">
+   <div class="spec type lang-ocaml" id="type-constrained">
     <a href="#type-constrained" class="anchor"></a><code><span class="keyword">type</span> <span>'a constrained</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = int</code>
    </div>
-   <div class="spec type" id="type-exact_variant">
+   <div class="spec type lang-ocaml" id="type-exact_variant">
     <a href="#type-exact_variant" class="anchor"></a><code><span class="keyword">type</span> <span>'a exact_variant</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = <span>[ `A <span><span>| `B</span> of int</span> ]</span></code>
    </div>
-   <div class="spec type" id="type-lower_variant">
+   <div class="spec type lang-ocaml" id="type-lower_variant">
     <a href="#type-lower_variant" class="anchor"></a><code><span class="keyword">type</span> <span>'a lower_variant</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = <span>[&gt; `A <span><span>| `B</span> of int</span> ]</span></code>
    </div>
-   <div class="spec type" id="type-any_variant">
+   <div class="spec type lang-ocaml" id="type-any_variant">
     <a href="#type-any_variant" class="anchor"></a><code><span class="keyword">type</span> <span>'a any_variant</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = <span>[&gt;  ]</span></code>
    </div>
-   <div class="spec type" id="type-upper_variant">
+   <div class="spec type lang-ocaml" id="type-upper_variant">
     <a href="#type-upper_variant" class="anchor"></a><code><span class="keyword">type</span> <span>'a upper_variant</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = <span>[&lt; `A <span><span>| `B</span> of int</span> ]</span></code>
    </div>
-   <div class="spec type" id="type-named_variant">
+   <div class="spec type lang-ocaml" id="type-named_variant">
     <a href="#type-named_variant" class="anchor"></a><code><span class="keyword">type</span> <span>'a named_variant</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = <span>[&lt; <a href="index.html#type-polymorphic_variant">polymorphic_variant</a> ]</span></code>
    </div>
-   <div class="spec type" id="type-exact_object">
+   <div class="spec type lang-ocaml" id="type-exact_object">
     <a href="#type-exact_object" class="anchor"></a><code><span class="keyword">type</span> <span>'a exact_object</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = &lt; a : int; b : int; &gt;</code>
    </div>
-   <div class="spec type" id="type-lower_object">
+   <div class="spec type lang-ocaml" id="type-lower_object">
     <a href="#type-lower_object" class="anchor"></a><code><span class="keyword">type</span> <span>'a lower_object</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = &lt; a : int; b : int; .. &gt;</code>
    </div>
-   <div class="spec type" id="type-poly_object">
+   <div class="spec type lang-ocaml" id="type-poly_object">
     <a href="#type-poly_object" class="anchor"></a><code><span class="keyword">type</span> <span>'a poly_object</span> = <span class="type-var">'a</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = &lt; a : a. <span class="type-var">'a</span>; &gt;</code>
    </div>
-   <div class="spec type" id="type-double_constrained">
+   <div class="spec type lang-ocaml" id="type-double_constrained">
     <a href="#type-double_constrained" class="anchor"></a><code><span class="keyword">type</span> <span>('a, 'b) double_constrained</span> = <span class="type-var">'a</span> * <span class="type-var">'b</span> <span class="keyword">constraint</span> <span class="type-var">'a</span> = int <span class="keyword">constraint</span> <span class="type-var">'b</span> = unit</code>
    </div>
-   <div class="spec type" id="type-as_">
+   <div class="spec type lang-ocaml" id="type-as_">
     <a href="#type-as_" class="anchor"></a><code><span class="keyword">type</span> as_ = int <span class="keyword">as</span> 'a * <span class="type-var">'a</span></code>
    </div>
-   <div class="spec type" id="type-extensible">
+   <div class="spec type lang-ocaml" id="type-extensible">
     <a href="#type-extensible" class="anchor"></a><code><span class="keyword">type</span> extensible = ..</code>
    </div>
-   <div class="spec extension">
+   <div class="spec extension lang-ocaml">
     <code><span class="keyword">type</span> <a href="index.html#type-extensible">extensible</a> += </code>
     <table>
      <tbody>
@@ -396,7 +396,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-mutually">
+   <div class="spec type lang-ocaml" id="type-mutually">
     <a href="#type-mutually" class="anchor"></a><code><span class="keyword">type</span> mutually = </code>
     <table>
      <tbody>
@@ -408,7 +408,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec type" id="type-recursive">
+   <div class="spec type lang-ocaml" id="type-recursive">
     <a href="#type-recursive" class="anchor"></a><code><span class="keyword">and</span> recursive = </code>
     <table>
      <tbody>
@@ -420,7 +420,7 @@
      </tbody>
     </table>
    </div>
-   <div class="spec exception" id="exception-Foo">
+   <div class="spec exception lang-ocaml" id="exception-Foo">
     <a href="#exception-Foo" class="anchor"></a><code><span class="keyword">exception</span> <span class="exception">Foo</span> <span class="keyword">of</span> int * int</code>
    </div>
   </div>
