--- a/test/html/expect/test_package+re/Alias/X/index.html
+++ b/test/html/expect/test_package+re/Alias/X/index.html
@@ -23,8 +23,11 @@
   </header>
   <div class="content">
    <div>
-    <div class="spec type" id="type-t">
+    <div class="spec type lang-reason" id="type-t">
      <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = int;</code>
+    </div>
+    <div class="spec type lang-ocaml" id="type-t">
+     <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t = int</code>
     </div>
     <div>
      <p>
