--- a/test/html/expect/test_package+re/Bugs/index.html
+++ b/test/html/expect/test_package+re/Bugs/index.html
@@ -22,11 +22,14 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec type" id="type-opt">
+   <div class="spec type lang-reason" id="type-opt">
     <a href="#type-opt" class="anchor"></a><code><span class="keyword">type</span> opt('a) = option(<span class="type-var">'a</span>);</code>
    </div>
+   <div class="spec type lang-ocaml" id="type-opt">
+    <a href="#type-opt" class="anchor"></a><code><span class="keyword">type</span> <span>'a opt</span> = <span><span class="type-var">'a</span> option</span></code>
+   </div>
    <div>
-    <div class="spec value" id="val-foo">
+    <div class="spec value lang-ocaml" id="val-foo">
      <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: <span>?⁠bar:<span class="type-var">'a</span></span> <span>=&gt;</span> unit <span>=&gt;</span> unit;</code>
     </div>
     <div>
