--- a/test/html/expect/test_package+re/Include_sections/index.html
+++ b/test/html/expect/test_package+re/Include_sections/index.html
@@ -70,7 +70,7 @@
   </nav>
   <div class="content">
    <div>
-    <div class="spec module-type" id="module-type-Something">
+    <div class="spec module-type lang-ocaml" id="module-type-Something">
      <a href="#module-type-Something" class="anchor"></a><code><span class="keyword">module</span> <span class="keyword">type</span> <a href="module-type-Something/index.html">Something</a> = { ... };</code>
     </div>
     <div>
@@ -85,9 +85,9 @@
     </p>
    </aside>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
-      <div class="spec value" id="val-something">
+      <div class="spec value lang-ocaml" id="val-something">
        <a href="#val-something" class="anchor"></a><code><span class="keyword">let</span> something: unit;</code>
       </div>
       <h2 id="something-1">
@@ -98,14 +98,14 @@
         foo
        </p>
       </aside>
-      <div class="spec value" id="val-foo">
+      <div class="spec value lang-ocaml" id="val-foo">
        <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: unit;</code>
       </div>
       <h3 id="something-2">
        <a href="#something-2" class="anchor"></a>Something 2
       </h3>
       <div>
-       <div class="spec value" id="val-bar">
+       <div class="spec value lang-ocaml" id="val-bar">
         <a href="#val-bar" class="anchor"></a><code><span class="keyword">let</span> bar: unit;</code>
        </div>
        <div>
@@ -134,9 +134,9 @@
     </p>
    </aside>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
-      <div class="spec value" id="val-something">
+      <div class="spec value lang-ocaml" id="val-something">
        <a href="#val-something" class="anchor"></a><code><span class="keyword">let</span> something: unit;</code>
       </div>
       <h3 id="something-1">
@@ -147,14 +147,14 @@
         foo
        </p>
       </aside>
-      <div class="spec value" id="val-foo">
+      <div class="spec value lang-ocaml" id="val-foo">
        <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: unit;</code>
       </div>
       <h4 id="something-2">
        <a href="#something-2" class="anchor"></a>Something 2
       </h4>
       <div>
-       <div class="spec value" id="val-bar">
+       <div class="spec value lang-ocaml" id="val-bar">
         <a href="#val-bar" class="anchor"></a><code><span class="keyword">let</span> bar: unit;</code>
        </div>
        <div>
@@ -183,9 +183,9 @@
     </p>
    </aside>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
-      <div class="spec value" id="val-something">
+      <div class="spec value lang-ocaml" id="val-something">
        <a href="#val-something" class="anchor"></a><code><span class="keyword">let</span> something: unit;</code>
       </div>
       <h4 id="something-1">
@@ -196,14 +196,14 @@
         foo
        </p>
       </aside>
-      <div class="spec value" id="val-foo">
+      <div class="spec value lang-ocaml" id="val-foo">
        <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: unit;</code>
       </div>
       <h5 id="something-2">
        <a href="#something-2" class="anchor"></a>Something 2
       </h5>
       <div>
-       <div class="spec value" id="val-bar">
+       <div class="spec value lang-ocaml" id="val-bar">
         <a href="#val-bar" class="anchor"></a><code><span class="keyword">let</span> bar: unit;</code>
        </div>
        <div>
@@ -229,13 +229,13 @@
     </p>
    </aside>
    <div>
-    <div class="spec include">
+    <div class="spec include lang-ocaml">
      <div class="doc">
       <details open="open">
        <summary>
         <span class="def"><code><span class="keyword">include</span> <a href="module-type-Something/index.html">Something</a><span class="keyword">;</span></code></span>
        </summary>
-       <div class="spec value" id="val-something">
+       <div class="spec value lang-ocaml" id="val-something">
         <a href="#val-something" class="anchor"></a><code><span class="keyword">let</span> something: unit;</code>
        </div>
        <h2 id="something-1">
@@ -246,14 +246,14 @@
          foo
         </p>
        </aside>
-       <div class="spec value" id="val-foo">
+       <div class="spec value lang-ocaml" id="val-foo">
         <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: unit;</code>
        </div>
        <h3 id="something-2">
         <a href="#something-2" class="anchor"></a>Something 2
        </h3>
        <div>
-        <div class="spec value" id="val-bar">
+        <div class="spec value lang-ocaml" id="val-bar">
          <a href="#val-bar" class="anchor"></a><code><span class="keyword">let</span> bar: unit;</code>
         </div>
         <div>
