--- a/test/html/expect/test_package+re/Include_sections/module-type-Something/index.html
+++ b/test/html/expect/test_package+re/Include_sections/module-type-Something/index.html
@@ -40,7 +40,7 @@
    </ul>
   </nav>
   <div class="content">
-   <div class="spec value" id="val-something">
+   <div class="spec value lang-ocaml" id="val-something">
     <a href="#val-something" class="anchor"></a><code><span class="keyword">let</span> something: unit;</code>
    </div>
    <h2 id="something-1">
@@ -51,14 +51,14 @@
      foo
     </p>
    </aside>
-   <div class="spec value" id="val-foo">
+   <div class="spec value lang-ocaml" id="val-foo">
     <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: unit;</code>
    </div>
    <h3 id="something-2">
     <a href="#something-2" class="anchor"></a>Something 2
    </h3>
    <div>
-    <div class="spec value" id="val-bar">
+    <div class="spec value lang-ocaml" id="val-bar">
      <a href="#val-bar" class="anchor"></a><code><span class="keyword">let</span> bar: unit;</code>
     </div>
     <div>
