--- a/test/html/expect/test_package+re/Markup/index.html
+++ b/test/html/expect/test_package+re/Markup/index.html
@@ -416,7 +416,7 @@ let bar =
     </dl>
    </aside>
    <div>
-    <div class="spec value" id="val-foo">
+    <div class="spec value lang-ocaml" id="val-foo">
      <a href="#val-foo" class="anchor"></a><code><span class="keyword">let</span> foo: unit;</code>
     </div>
     <div>
