--- a/test/html/expect/test_package+re/Nested/F/argument-1-Arg1/index.html
+++ b/test/html/expect/test_package+re/Nested/F/argument-1-Arg1/index.html
@@ -36,8 +36,11 @@
     <a href="#type" class="anchor"></a>Type
    </h2>
    <div>
-    <div class="spec type" id="type-t">
+    <div class="spec type lang-reason" id="type-t">
      <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t;</code>
+    </div>
+    <div class="spec type lang-ocaml" id="type-t">
+     <a href="#type-t" class="anchor"></a><code><span class="keyword">type</span> t</code>
     </div>
     <div>
      <p>
@@ -49,7 +52,7 @@
     <a href="#values" class="anchor"></a>Values
    </h2>
    <div>
-    <div class="spec value" id="val-y">
+    <div class="spec value lang-ocaml" id="val-y">
      <a href="#val-y" class="anchor"></a><code><span class="keyword">let</span> y: <a href="index.html#type-t">t</a>;</code>
     </div>
     <div>
