--- a/test/html/expect/test_package+re/Nested/class-inherits/index.html
+++ b/test/html/expect/test_package+re/Nested/class-inherits/index.html
@@ -22,7 +22,7 @@
    </h1>
   </header>
   <div class="content">
-   <div class="spec inherit">
+   <div class="spec inherit lang-ocaml">
     <code><span class="keyword">inherit</span> <a href="../class-z/index.html">z</a></code>
    </div>
   </div>
